--- a/Linqq/Linqq.csproj
+++ b/Linqq/Linqq.csproj
@@ -2,8 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>1.0.2</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Description>About
+A collection of LINQ-like functions for enumeration</Description>
+    <Authors>Nigel Bess</Authors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
